Added additional interactions

--- a/Scripts/Final_Scripts/analyses/1_sem.Rmd
+++ b/Scripts/Final_Scripts/analyses/1_sem.Rmd
@@ -147,9 +147,11 @@ library(cSEM)
 ######## Greening model
 greening <- '
   STEPINC ~ BACKGROUND_CLIMATE + PULSE_STRESSORS + WATER_ACCESS + VEGETATION + ANTHROPIC_PRESSURES + FIRE
-  VEGETATION ~ PULSE_STRESSORS + BACKGROUND_CLIMATE +ANTHROPIC_PRESSURES + FIRE
+  VEGETATION ~ PULSE_STRESSORS + BACKGROUND_CLIMATE +ANTHROPIC_PRESSURES + FIRE + WATER_ACCESS
   FIRE ~ PULSE_STRESSORS + BACKGROUND_CLIMATE + ANTHROPIC_PRESSURES
   WATER_ACCESS ~ ANTHROPIC_PRESSURES
+  PULSE_STRESSORS ~ ANTHROPIC_PRESSURES
+  BACKGROUND_CLIMATE ~ ANTHROPIC_PRESSURES
   
   BACKGROUND_CLIMATE <~ trend_re + trend_at
   PULSE_STRESSORS <~ trend_heatwave + trend_spei
@@ -176,9 +178,11 @@ green_modelfit <- cSEM::testOMF(greening_model1)
 ######## Browning model
 browning <- '
   STEPDEC ~ BACKGROUND_CLIMATE + PULSE_STRESSORS + WATER_ACCESS + VEGETATION + ANTHROPIC_PRESSURES + FIRE
-  VEGETATION ~ PULSE_STRESSORS + BACKGROUND_CLIMATE +ANTHROPIC_PRESSURES + FIRE
+  VEGETATION ~ PULSE_STRESSORS + BACKGROUND_CLIMATE +ANTHROPIC_PRESSURES + FIRE + WATER_ACCESS
   FIRE ~ PULSE_STRESSORS + BACKGROUND_CLIMATE + ANTHROPIC_PRESSURES
   WATER_ACCESS ~ ANTHROPIC_PRESSURES
+  PULSE_STRESSORS ~ ANTHROPIC_PRESSURES
+  BACKGROUND_CLIMATE ~ ANTHROPIC_PRESSURES
   
   BACKGROUND_CLIMATE <~ trend_re + trend_at
   PULSE_STRESSORS <~ trend_heatwave + trend_spei
